- added direct dynamic methods to orm factory. - improve code coverage - refactoring